news feed implemented

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,4 @@ spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
 spring.jpa.hibernate.ddl-auto=create
 spring.profiles.active=production
+spring.jpa.properties.hibernate.jdbc.time_zone=UTC
