--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
-spring.datasource.url=jdbc:postgresql:///${DB_NAME}
-spring.datasource.username=${DB_USERNAME}
-spring.datasource.password=${DB_PASSWORD}
-spring.jpa.hibernate.ddl-auto=create
-spring.profiles.active=production
-spring.jpa.properties.hibernate.jdbc.time_zone=UTC
+#spring.datasource.url=jdbc:postgresql:///${DB_NAME}
+#spring.datasource.username=${DB_USERNAME}
+#spring.datasource.password=${DB_PASSWORD}
+#spring.jpa.hibernate.ddl-auto=create
+#spring.jpa.properties.hibernate.jdbc.time_zone=UTC
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.datasource.driverClassName=org.postgresql.Driver
